# sqlite-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: migration_template.sql  user_management.py  users.ipynb  users.py
examples/pydantic_validation/: pydantic_example.ipynb
examples/user_mamagement/: user_manager.py  user_manager_example.ipynb
examples/user_mamagement/migrations/: migration_0001.sql
src/sqlite_manager/: crud.py  interface.py  migrator.py
tests/: conftest.py  test_crud.py  test_interface.py  test_migrator.py
tests/examples/: test_user_manager.py
tests/examples/migrations/: migration_0001.sql
