[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlite-manager"
version = "0.1.0"
description = "A lightweight, type-safe Python library for managing SQLite databases"
readme = "README.md"
authors = [
    { name = "Jaco Verster", email = "versterrie@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
users = [
    "bcrypt>=4.3.0",
]
examples = [
    "ipykernel>=6.29.5",
    "pydantic>=2.11.2",
]

