[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlite-manager"
version = "0.1.0"
description = "A lightweight, type-safe Python library for managing SQLite databases"
readme = "README.md"
license = { file = "LICENSE" }
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
authors = [
    { name = "Jaco Verster", email = "versterrie@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typing_extensions>=4.0.0; python_version < '3.12'"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[project.optional-dependencies]
examples = [
    "bcrypt>=4.3.0",
    "ipykernel>=6.29.5",
    "pydantic>=2.11.2",
]

[tool.ty.src]
# Notebooks are example/demo files; exclude them from type analysis.
exclude = ["examples/**/*.ipynb"]
